# lonely-highway

./: README.md  vercel.json
docs/superpowers/plans/: 2026-03-21-environment.md  2026-03-21-osm-pipeline.md  2026-03-21-progression-ui.md  2026-03-21-traffic-ai.md  2026-03-21-vehicle-physics.md  2026-03-21-world-streaming.md
docs/superpowers/specs/: 2026-03-21-lonely-highway-design.md
island-gun-king/: index.html
pipeline/: Cargo.toml
pipeline/src/: config.rs  lib.rs  main.rs
pipeline/src/export/: gltf.rs  metadata.rs  minimap.rs  mod.rs  traffic_json.rs
pipeline/src/fetch/: mod.rs
pipeline/src/mesh/: building.rs  elevation.rs  mod.rs  road.rs
pipeline/src/parse/: fallbacks.rs  mod.rs  types.rs
pipeline/src/tile/: boundary.rs  mod.rs
pipeline/src/traffic/: lane_graph.rs  mod.rs  signals.rs
pipeline/tests/fixtures/: small_area.osm.xml
prototype/: city.json  index.html
prototype/.vercel/: project.json
prototype/city-data/: tile_-1_-1.glb  tile_-1_-1_meta.json  tile_-1_-1_traffic.json  tile_-1_0.glb  tile_-1_0_meta.json  tile_-1_0_traffic.json  tile_-2_-1_meta.json  tile_-2_-1_traffic.json  tile_-3_-1.glb  tile_-3_-1_meta.json  tile_-3_-1_traffic.json  tile_0_-1.glb  tile_0_-1_meta.json  tile_0_-1_traffic.json  tile_0_0.glb  tile_0_0_meta.json  tile_0_0_traffic.json  tile_1_-1_meta.json  tile_1_-1_traffic.json  tile_1_0.glb  tile_1_0_meta.json  tile_1_0_traffic.json
unity-project/: .gitignore
unity-project/Assets/LonelyHighway/Scripts/Camera/: ChaseCamera.cs  (+4 more)
unity-project/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
(+26 files in other folders)
