[package]
name = "lonely-highway-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
osmpbf = "0.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
geo = "0.28"
geo-types = "0.7"
gltf-json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", features = ["png"] }

[dev-dependencies]
tempfile = "3"
